<?xml version="1.0"?>
<package format="3">
  <name>vision_node</name>
  <version>0.1.0</version>
  <description>Vision node for Jenga detection</description>

  <maintainer email="your@email.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>ultralytics</depend>
  <depend>tf2_ros</depend>
  <depend>tf_transformations</depend>
  <depend>mycobot_interfaces</depend>

  <exec_depend>ament_python</exec_depend>

  <build_type>ament_python</build_type>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

